--- a/templates/index.html
+++ b/templates/index.html
@@ -84,7 +84,7 @@
         </div>
         <div class="content-form">
           <input
-            type="text"
+            type="number"
             class="form_input"
             name="telefono"
             placeholder=" "
