--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,7 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
 @import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css");
-@import url("https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css");
+/* @import url("https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css"); */
 @import url("https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css");
+@import url("./toast.css");
 * {
   margin: 0;
   padding: 0;
@@ -180,11 +181,13 @@ body .tabla {
 }
 .fa-solid {
   font-size: 20px;
-  width: 35px;
-  height: 35px;
-  text-align: center;
-  line-height: 35px;
   cursor: pointer;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+.fa-solid span {
+  font-size: 10px;
 }
 .fa-user-pen {
   color: green;
@@ -214,9 +217,14 @@ body .tabla {
   white-space: nowrap;
   text-overflow: ellipsis;
   overflow: hidden;
+
+  position: relative;
 }
 .fa-bars {
   display: none;
+}
+.option {
+  display: flex;
 }
 @media (max-width: 950px) {
   .nav {
@@ -244,13 +252,23 @@ body .tabla {
     content: attr(data-label);
     text-transform: uppercase;
     font-weight: 600;
-    float: left;
+    position: absolute;
+    left: 10px;
   }
-  .tabla tbody .option::before {
-    line-height: 35px;
-  }
+
   thead {
     display: none;
+  }
+  .fa-solid {
+    width: initial;
+    display: flex;
+    align-items: center;
+  }
+  .tabla .option {
+    display: flex;
+    gap: 5px;
+    justify-content: end;
+    align-items: center;
   }
   .tabla tr {
     border: 1px solid #ddd;
